trinity-base/tde-common-cmake

--- a/profiles/etc/portage/package.accept_keywords/custom-14.0.8
+++ b/profiles/etc/portage/package.accept_keywords/custom-14.0.8
@@ -320,3 +320,5 @@ trinity-base/tdebase-pam
 #Добавил я по зависимостям
 media-libs/jasper
 sys-apps/linuxbuh-tde-update-script
+trinity-apps/kkbswitch
+trinity-base/tde-common-cmake
